--- a/VRChat/43/1251843.html
+++ b/VRChat/43/1251843.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "pIi13RvQRitF9LhcKTWu2zRuTTp02HhmE8Ui6o611G8="></script>
+    "5oeAifFYjyYNeqxtfvoh747IgTQd7PXivEoXRjdQfB0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅたんバーチャル抱き枕セット","description":"おきゅたんモチーフのバーチャル抱き枕が２種類入ったお得なセット！　キミの安眠をバーチャルにサポートするよ。\n\nタイプA：おやすみおきゅたん\nタイプB：おきゅたん＆おきゅたんbot\n\n※VRChat用のワールド用データとしての抱き枕です。サンプルワールドデータ付き。\n\n※DynamicBoneをお持ちの方にはボーン入りで少し揺れるバージョンも同梱されているので、お好みで使ってみてね。\n\n※商品写真にあるパジャマおきゅたんアバターは付属しないよっ\n\n\n★スペシャルサンクス\n\n抱き枕イラスト：まいてぃ999さん\nhttps://twitter.com/mighty999\n\n現実世界用はこちら！ バーチャルと現実と両方あるとプレゼンスがアップ！？\nおきゅたん＆おきゅたんbot 抱き枕カバー\nhttps://mighty.booth.pm/items/1164749\n\n枕のボーンとウェイト：オノッチ / 鹿さん\nhttps://twitter.com/onotchi_\n\n\n--------------------\n\n● 規約／ご注意\n\n　・VRChatのワールドの一部に含んだり、ご自身のアバターのアクセサリーに使用可（ペデスタルも可）\n\n　・SNSへのシェアについては、VRChat内の写真などの形でのシェア（元の画像データそのまま配布でとかではない）なら歓迎です。\n\n　・改変について、オリジナルの絵柄に変えて自分で使ったり、一部の友人に渡すなどは可。\n\n　・モデルを含んだ改変データをネット上で広く無償配布したり、販売したりするのは不可（相談してね）。\n\n\n　・動画の配信時の使用、出演、映り込み、収益化配信など可。その際のクレジット表記も不要。\n\n　※クレジット表記は基本不要ですが、おきゅたんやおきゅまーとの名前やリンクを表記してもらえるのはもちろんうれしいです。\n\n　・おきゅたんのキャラクターをもとにした二次創作についてのQ\u0026Aは下記URLをご参照ください。\n\nhttps://ocutanbot.wixsite.com/ocutan/faq","url":"https://booth.pm/ja/items/1251843","offers":{"priceCurrency":"JPY","@type":"Offer","price":"480"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1251843/b4b27a39-7443-45fc-878d-568ce48aae39_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pIi13RvQRitF9LhcKTWu2zRuTTp02HhmE8Ui6o611G8="></script>
+    nonce="5oeAifFYjyYNeqxtfvoh747IgTQd7PXivEoXRjdQfB0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -618,7 +618,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
