--- a/VRChat/37/1257237.html
+++ b/VRChat/37/1257237.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "aiWXKIuNMZ67bcVWypmi0rfR+gPlFhGkNVVFBu8+wMw="></script>
+    "PzDhTOtgBZ6ddwW4pF8FemgQDQQhdfbFRdJ+2Qq6mxk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dデータ「双剣　漆工」","description":"VRChat用アクセサリー等、ゲームでの使用を想定した３Dモデルです。\n\n\n---------------------------------------------------------\n更新履歴\n2019/5/11\nワールドの環境下によって真っ黒になる問題の改善案Prefabを追加\n「四拾弐重工販売所」様のPBTシェーダーを同梱させていただいています\nhttps://booth.pm/ja/items/1266870\n\n2019/3/4\nシェイプキーが動作しない不具合に対応\n・unitypackage内、objectフォルダ内のfbxデータの更新\n\n2019/3/3\nリリース開始\n\n---------------------------------------------------------\n\n○内容物\n・weapon_shikkou.unitypackage（基本こちらをインポートしてお使いください）\n・object（fbxファイルです）\n・texture（PNGテクスチャ各種）\n\n\n\n○禁止事項\n・購入者以外がデータ利用できるような行為全般（公にアップロード、他人へのデータ譲渡など）\n　※ワールドオブジェクトとしての設置等、元データが他人の手に渡らない形であれば問題ありません\n・特定の個人や団体への誹謗中傷をするのに使う\n・製作者を名乗る等、著しく良識に欠ける行為\n\n※用途が禁止事項に抵触するか分からない場合、お気軽にお問い合わせください\n　営利活動含め、広く使用していただけることを願っています\n\n\n○データ詳細\nシェイプキーで刀身、グリップの長さを調整可能です\n「shikkou.prefab」・・・調整可能データ\n「shikkou_transf.prefab」・・・各部を最大まで伸ばした状態\n\n\n○お問い合わせ先\nTwitter：ジム (@gmkan79)\nmail：gmkan79@gmail.com","url":"https://booth.pm/ja/items/1257237","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d92f6cb7-dd7e-4d4c-81c1-456eb755836b/i/1257237/cf7bc6e9-54a5-4a86-a734-bbcc94c7b849_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aiWXKIuNMZ67bcVWypmi0rfR+gPlFhGkNVVFBu8+wMw="></script>
+    nonce="PzDhTOtgBZ6ddwW4pF8FemgQDQQhdfbFRdJ+2Qq6mxk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -585,7 +585,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
